Socket re-write options : URL not recognising wss protocol so replaced with URI